[project]
name = "lavender-report"
version = "0.1.0"
description = "LavenderReport is an open-source command-line tool for categorizing and reporting Stripe payment transactions by region. Designed for EU businesses, it helps you split your payment data into domestic, intra-EU, and extra-EU transactions for easy VAT reporting and financial review."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "stripe>=12.1.0",
]
